[package]
name = 'precompiles'
version = '0.0.1'
authors = ['Polkafoundry']
edition = '2018'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = '0.4.8'
rustc-hex = { version = '2.0.1', default-features = false }

sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }

pallet-evm = { default-features = false, git = 'https://github.com/thanhtung6824/frontier.git', branch = 'v0.1-polka' }
pallet-evm-precompile-dispatch = { default-features = false, git = 'https://github.com/thanhtung6824/frontier.git', branch = 'v0.1-polka' }
pallet-evm-precompile-modexp = { default-features = false, git = 'https://github.com/thanhtung6824/frontier.git', branch = 'v0.1-polka' }
pallet-evm-precompile-simple = { default-features = false, git = 'https://github.com/thanhtung6824/frontier.git', branch = 'v0.1-polka' }

[features]
default = [ "std" ]
std = [
    'sp-std/std',
    'sp-core/std',
    'pallet-evm-precompile-dispatch/std',
    'pallet-evm-precompile-modexp/std',
    'pallet-evm-precompile-simple/std',
]
